[package]
name = "r_ex3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.35.1", features=["full"]}
tokio-util = {version="0.7.10",features=["full"]}
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.0.0"
