[package]
name = "sqlx_bb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql"] }
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1.20.0", features = ["full"] }
rust_decimal = "1.33.1"
